# redboard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.json  docker-compose.yml  package.json  render.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/: app.tsx  core.ts  index.tsx  protocol.ts  state.ts  sync.tsx  vite.config.ts
client/components/: edit_container.tsx  render_object.tsx  render_square.tsx  render_textbox.tsx  render_triangle.tsx
service/: Cargo.toml
service/src/: board_handler.rs  broadcaster.rs  change.rs  checkpointer.rs  main.rs  message.rs  repository.rs  socket.rs
src/: main.rs  message.rs  presence.rs  repository.rs  session_checker.rs
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: index.css  index.html  index.tsx  protocol.ts  state.ts  sync.tsx
web/src/components/: color_picker.tsx  cursor.tsx  edit_container.tsx  render_circle.tsx  render_object.tsx  render_square.tsx  render_star.tsx  render_textbox.tsx  render_triangle.tsx
web/src/screens/: board.tsx  home.tsx  not_found.tsx
