[package]
name = "redboard-service"
version = "1.0.0"
authors = ["Luke Westby <lukewestby@protonmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
dotenv = "0.15"
futures = "0.3"
itertools = "0.10"
redis = { version = "0.21", features = ["aio", "tokio-comp", "tls", "tokio-native-tls-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.3", features = ["cors"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
bb8-redis = "0.11"
chrono = "0.4"
anyhow = "1.0"
regex = "1.6"
lazy_static = "1.4"
async-stream = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-retry = "0.3"
tungstenite = "0.17"
